--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="javascript:void(0)" class="work__img">
                         <img src="assets/img/lighthouse.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="javascript:void(0)" class="work__img">
                         <img src="assets/img/erp.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="javascript:void(0)" class="work__img">
                         <img src="assets/img/nostalgia.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="javascript:void(0)" class="work__img">
                         <img src="assets/img/prasarana.png" alt="">
                     </a>
                     <!-- <a href="" class="work__img">
